crates/biome_cli/tests/snapshots/main_cases_plugins/category_wide_lint_suppression_is_inactive_without_plugins.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "linter": { "rules": { "preset": "none" } }
}
```

## `test.js`

```js
// biome-ignore lint: no lint rules are enabled
const value = 1;

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
